// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  HIGH  // Administrator Pusat
  LOW   // Pengelola Koperasi
}

enum KoperasiType {
  SIMPAN_PINJAM
  KONSUMSI
  PRODUKSI
  JASA
  SERBA_USAHA
}

enum KoperasiStatus {
  PENDING_VERIFICATION    // Menunggu verifikasi dokumen admin
  PENDING_SURVEY          // Dokumen diverifikasi, menunggu survei lokasi
  SURVEY_SCHEDULED        // Survei dijadwalkan
  SURVEY_COMPLETED        // Survei selesai, menunggu keputusan
  PENDING_APPROVAL        // Menunggu persetujuan akhir pendirian
  AKTIF_SEHAT             // Disetujui dan dalam kondisi sehat
  AKTIF_TIDAK_SEHAT       // Disetujui tapi dalam kondisi tidak sehat
  DITOLAK                 // Ditolak oleh admin
}

enum LegalStatus {
  LEGAL
  PENDING_REVIEW
  REJECTED
  NOT_SUBMITTED
}

enum ActivityType {
  MEETING
  TRAINING
  AUDIT
  EVENT
  OTHER
}

enum ActivityStatus {
  PLANNED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum EventStatus {
  UPCOMING    // Akan datang
  ONGOING     // Sedang berlangsung
  COMPLETED   // Selesai
  CANCELLED   // Dibatalkan
}

enum DocumentStatus {
  PENDING     // Menunggu verifikasi
  APPROVED    // Dokumen disetujui
  REJECTED    // Dokumen ditolak
  RESUBMIT    // Perlu submit ulang
}

enum DocumentType {
  AKTA_PENDIRIAN        // Akta Pendirian Koperasi (AD/ART)
  BERITA_ACARA          // Berita Acara Rapat Pendirian
  DAFTAR_PENDIRI        // Daftar Nama & KTP Pendiri
  BUKTI_SETORAN         // Bukti Setoran Modal Awal
  SURAT_DOMISILI        // Surat Keterangan Domisili
  NPWP                  // NPWP Koperasi
  RAT                   // Rapat Anggota Tahunan
  OTHER                 // Dokumen Lainnya
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String
  password      String
  role          UserRole  @default(LOW)
  phone         String?   // Phone number
  emailVerified DateTime?
  image         String?
  profileImage  String?   // Path to profile photo
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  // Relations - One user LOW can only create one koperasi
  ownedKoperasi Koperasi? @relation("KoperasiOwner")

  @@map("users")
}

model Koperasi {
  id                String        @id @default(cuid())
  name              String
  type              KoperasiType
  status            KoperasiStatus @default(PENDING_VERIFICATION)
  legalStatus       LegalStatus   @default(NOT_SUBMITTED)
  totalMembers      Int           @default(0)
  registrationDate  DateTime      @default(now())
  lastActivity      DateTime      @default(now())
  address           String
  contactPerson     String
  contactPhone      String
  contactEmail      String?
  description       String?
  
  // Statistik Koperasi
  totalFunds          Float         @default(0)      // Total Dana Koperasi
  activeMembers       Int           @default(0)      // Jumlah Anggota Aktif
  monthlyTransactions Float         @default(0)      // Transaksi Bulan Ini
  
  // Additional fields for approval process
  submissionDate    DateTime?     // When submitted for approval
  approvalDate      DateTime?     // When approved/rejected
  approvalNotes     String?       // Notes from admin
  rejectionReason   String?       // Reason if rejected
  resubmissionCount Int           @default(0)  // Jumlah pengajuan ulang
  lastRejectionDate DateTime?     // Tanggal penolakan terakhir
  
  // Survey fields
  surveyScheduledDate   DateTime?   // Tanggal survei dijadwalkan
  surveyCompletedDate   DateTime?   // Tanggal survei selesai
  surveyNotes           String?     // Catatan hasil survei
  surveyOfficer         String?     // Petugas yang melakukan survei
  
  // Document verification
  documentsVerifiedDate DateTime?   // Tanggal dokumen diverifikasi
  documentsVerifiedBy   String?     // Admin yang verifikasi dokumen
  
  // Audit fields
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt
  
  // Relations - One koperasi belongs to one user LOW
  owner             User          @relation("KoperasiOwner", fields: [ownerId], references: [id])
  ownerId           String        @unique

  // Relations
  activities        Activity[]
  documents         Document[]
  members           Member[]

  @@map("koperasi")
}

model Member {
  id            String    @id @default(cuid())
  name          String
  nik           String?   @unique // Nomor Induk Kependudukan
  dateOfBirth   DateTime
  placeOfBirth  String?
  gender        String?   // LAKI_LAKI atau PEREMPUAN
  address       String
  phone         String?
  email         String?
  joinDate      DateTime  @default(now())
  memberNumber  String?   // Nomor anggota koperasi
  isActive      Boolean   @default(true)
  
  // Relations
  koperasi      Koperasi  @relation(fields: [koperasiId], references: [id], onDelete: Cascade)
  koperasiId    String
  
  // Audit fields
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  @@map("members")
}

model Activity {
  id          String         @id @default(cuid())
  title       String
  description String?
  date        DateTime
  type        ActivityType
  status      ActivityStatus @default(PLANNED)
  location    String?
  
  // Relations
  koperasi    Koperasi       @relation(fields: [koperasiId], references: [id], onDelete: Cascade)
  koperasiId  String
  
  // Audit fields
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt

  @@map("activities")
}

model Document {
  id             String         @id @default(cuid())
  documentType   DocumentType   // Jenis dokumen
  fileName       String
  originalName   String
  filePath       String
  fileSize       Int
  mimeType       String
  status         DocumentStatus @default(PENDING)
  uploadDate     DateTime       @default(now())
  reviewDate     DateTime?
  reviewNotes    String?
  reviewedBy     String?        // Admin yang mereview
  isRequired     Boolean        @default(true) // Dokumen wajib atau tidak
  
  // Relations
  koperasi       Koperasi       @relation(fields: [koperasiId], references: [id], onDelete: Cascade)
  koperasiId     String
  
  // Audit fields
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  @@map("documents")
}

model Event {
  id              String      @id @default(cuid())
  title           String      // Nama kegiatan
  description     String?     // Deskripsi kegiatan
  eventDate       DateTime    // Tanggal kegiatan
  startTime       String      // Waktu mulai (format HH:mm)
  endTime         String      // Waktu selesai (format HH:mm)
  location        String      // Tempat/lokasi
  organizer       String      // Nama pelaksana/penyelenggara
  status          EventStatus @default(UPCOMING)
  maxParticipants Int?        // Kuota peserta (opsional)
  
  // Audit fields
  createdBy       String      // User ID yang membuat (admin)
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  @@map("events")
}
